# useasywin32com

./: pyproject.toml
src/useasywin32com/: word.py
