[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "useasywin32com"
version = "0.0.2"
authors = [
    { name = "calm51", email = "calm51@protonmail.com" },
]
description = "useasywin32com"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["use easy win32com"]
dependencies = [
  "win32com",
]

[project.urls]
Homepage = "https://github.com/calm51/useasywin32com"
Issues = "https://github.com/calm51/useasywin32com/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
terminate_thread = ["*.dll", "*.so"]
